--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
